--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,3 +1,40 @@
 .button {
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    color: black;
+    border-radius: 0.5em;
+    transition: all 300ms ease;
+    border: none;
+    width: 100%;
     cursor: pointer;
+}
+
+.button.primary {
+    color: white;
+    background-color: var(--primary-color);
+}
+
+.button.primary:hover {
+    --primary-color-lightness: 30%;
+}
+
+.button.primary:active {
+    --primary-color-lightness: 20%;
+}
+
+.button.secondary {
+    color: var(--primary-color);
+    background-color: white;
+}
+
+.button.secondary:hover {
+    background-color: var(--primary-color);
+    color: white;
+}
+
+.button.secondary:active {
+    --primary-color-lightness: 20%;
+    background-color: var(--primary-color);
+    color: white;
 }
