--- a/src/components/Slider/styles.css
+++ b/src/components/Slider/styles.css
@@ -1,11 +1,12 @@
 .slider {
-    height: 100vh;
     display: flex;
     overflow: hidden;
 }
 
-.slider .slide {
+.slider__slide {
     min-width: 100%;
-    height: 100%;
     transition: transform 300ms ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
