--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -12,6 +12,7 @@
     padding: 1em;
     border-radius: 1em;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    max-width: 600px;
 }
 
 .register__button {
